# IEDIB_2024_2025

./: README.md
01 Big Data aplicado/T3 Hive/: apartado_2.sql
01_Big_Data_aplicado/T2_MapReduce_&_Pig_latin/: tasca_2.1_David_Ramirez.pig
02 Modelos IA/: tarea_7_parte_A.md
02 Modelos IA/T2 Utilizacion de modelos/: tasca_2_en_proceso.ipynb
02 Modelos IA/T3 Sistemas expertos/: tasca_3_David_Ramirez.ipynb
02 Modelos IA/T4 Robotica/: bubbleRob_IEDIB.ttt  bubbleRob_lineFollower_IEDIB.ttt
02 Modelos IA/T5 NLP/: learning.py  probabilistic_learning.py  requirements.txt  search.py  tarea_4_David_Ramirez_Ruiz.ipynb  text.py
02 Modelos IA/T6 NLP con redes neuronales/: tarea_6_David_Ramirez.ipynb
02 Modelos IA/T7 IA Generativa/: tarea_7_parte_A.md
03 Programacion Machine Learning/T3 Gestión de proyectos/tarea_evaluable/penguins/: pyproject.toml
03 Programacion Machine Learning/T3 Gestión de proyectos/tarea_evaluable/penguins/models/: dt.pck  knn.pck  lr.pck  svm.pck
03 Programacion Machine Learning/T3 Gestión de proyectos/tarea_evaluable/penguins/notebooks/: classification.ipynb  client.ipynb
03 Programacion Machine Learning/T3 Gestión de proyectos/tarea_evaluable/penguins/penguins/: penguins_service.py
03 Programacion Machine Learning/T5 Herramientas No Code/: index.html
03 Programacion Machine Learning/T6 Redes neuronales convolucionales/: tasca_6_David_Ramirez_Ruiz.ipynb
03 Programacion Machine Learning/T7 Convergencia tecnologica/: tarea_7_David_Ramirez_Ruiz.ipynb
03 Programacion Machine Learning/T8 Automatizacion/: apartado_1.ipynb  (+3 more)
(+116 files in other folders)
